# dream_stack

./: .env  .gitignore  Cargo.toml  Makefile  database.sqlite  package.json  pnpm-lock.yaml  tailwind.config.cjs
assets/: main.css
entity/: Cargo.toml
entity/src/: attachment.rs  lib.rs  prelude.rs  todo.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_todo.rs
src/: enum_fun.rs  main.rs
templates/: attachment-sub-form.html  base.html  home.html  recipient-form.html  recipient_input.html  tailwind_buttons.html  tailwind_forms_examples.html  tailwind_forms_sink.html  todo-form.html  todo-list.html
