[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
]
